First commited as before_4406_rev4